<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/centurygothic_bold"
            android:textSize="@dimen/large_text"
            android:text="@string/title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding"
            android:fontFamily="@font/centurygothic_bold"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/blue"
            android:text="@string/subtitle" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundrect">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:fontFamily="@font/centurygothic_bold"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/blue"
                    android:text="@string/start_expedition" />
                <TextView
                    android:id="@+id/routes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:fontFamily="@font/centurygothic_bold"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding">
                <LinearLayout
                    android:id="@+id/horizontalListView"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic_bold"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/blue"
                android:text="@string/weather" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                android:fontFamily="@font/centurygothic_bold"
                android:textSize="@dimen/small_text"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/explored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic_bold"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
